--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 *{
     margin: 0;
     padding: 0;
+    font-family: "Montserrat";
 }
 
 
  .buts {
     display: flex;
-    gap: 20px;
+    gap: 100px;
   
 } 
 button {
@@ -17,14 +22,14 @@ button {
 
 .container {
     border: 10px solid blue;
+    margin-bottom: 500px;
 }
 body {
-    border: 1px solid red;
     display: flex;
-    flex-direction: column-reverse;
+    justify-content: flex-end;
+    flex-direction: column;
     align-items: center;
     margin-bottom: 100px;
-
-
+    
     
 }
