--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
 }
 @font-face{
     font-family: NineTsukiRegular;
-    src: url(/home/ryan/Rock-Paper-Scissors/font/NineTsukiRegular.ttf);
+    src: url(font/NineTsukiRegular.ttf);
 }
 #title {
   
